cortex-r5-sample/tests/ui/mutex_guard_cannot_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/ui/mutex_guard_cannot_send.rs:18:19
   |
18 |     requires_send(guard);
   |     ------------- ^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `cortex_r5_sample::safe::MutexGuard<'_>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `cortex_r5_sample::safe::MutexGuard<'_>`
  --> src/safe/mutex.rs
   |
   | pub struct MutexGuard<'a> {
   |            ^^^^^^^^^^
note: required by a bound in `requires_send`
  --> tests/ui/mutex_guard_cannot_send.rs:10:21
   |
10 | fn requires_send<T: Send>(_: T) {}
   |                     ^^^^ required by this bound in `requires_send`
